{
    "name": "ActionMap",
    "maps": [
        {
            "name": "Player",
            "id": "c61b91db-47c1-4d67-9107-711c533d20f0",
            "actions": [
                {
                    "name": "JumpPress",
                    "type": "Button",
                    "id": "1d57e9cd-fc81-4320-b248-ef770417d43e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                },
                {
                    "name": "JumpRelease",
                    "type": "Button",
                    "id": "b38f9270-0fa3-4299-bf99-25d4feb764a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f6e62f51-d207-423d-b536-14a33ad48db5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "34ffe674-74b8-4de4-af0d-0f7c7eeb5447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DiveBounce",
                    "type": "Button",
                    "id": "1fb01794-f4ee-4403-8d46-5d8527888e3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc0e77be-4b37-4f9a-9076-e6e389b62589",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92e9f923-2573-4bd8-b8f7-19e3a84b1575",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "130d9858-664d-4a44-8f44-ff7c7f124541",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "83e1ab47-939b-4f09-b1e2-e3cbd7ec3884",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0fb8c19e-9cbb-4f9e-9f61-bf44d1def63b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4295c9a7-a305-43ac-948d-8eb6b961cc58",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9e2d8d18-c330-4e73-81d6-eb981d0db84c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "efd7a264-919f-4ade-bda2-d80914c3d2bb",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a490bcf6-7e12-47df-b9e9-7f1c04656f7e",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "DiveBounce",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}